# cocot

./: .gitignore  AUTHORS  COPYING  ChangeLog  ChangeLog.ja  Makefile.am  Makefile.in  NEWS  README  README.ja  UNICODE_MEMO  ccio.c  ccio.h  cocot.c  config.h.in  configure  configure.ac  cygwin-build.sh  cygwin-install.sh  debug.h  init.c  init.h  l10n_cjk_uni.c  l10n_cjk_uni.h  l10n_cjk_uni_table.c  l10n_cjk_uni_table.h  l10n_ja.c  l10n_ja.h  loop.c  loop.h  make_l10n_cjk_uni_table.pl  make_l10n_cjk_uni_table.sh  malloc.c  mktag.sh  release.sh  sigwinch.c  sigwinch.h  suspend.c  suspend.h
